# arcfaces

./: .gitignore  CHANGELOG.md  README.md  mise.toml  pyproject.toml  run_arcfaces.spec
.agents/assets/: README.template.md
.agents/skills/generate-readme/: SKILL.md
.agents/skills/update-readme/: SKILL.md  requirements.txt
.github/workflows/: ci.yml  release.yml
arcfaces/: __init__.py  __main__.py  arcfaces.py  embeddings.py  run_arcfaces.py
examples/arcfaces/faceless/: Olivia_0285708a.json  Olivia_0883bd17.json  Olivia_1cfc81a2.json  Olivia_215f55a1.json  Olivia_29f81c62.json  Olivia_332a4f56.json  Olivia_3549d9d6.json  Olivia_4dfba563.json  Olivia_665fd7e5.json  Olivia_68927b69.json  Olivia_6a3e9ff7.json  Olivia_6a489429.json  Olivia_71ca01af.json  Olivia_7c95bb2c.json  Olivia_a9b7ad1e.json  Olivia_b26836a3.json  Olivia_eb971ec9.json  Olivia_f3d3d1e4.json
examples/arcfaces/identity_000/: Olivia_02b15df0__face0.json
examples/arcfaces/identity_001/: Olivia_0322b654__face0.json  Olivia_30fee4f8__face0.json
examples/arcfaces/identity_002/: Olivia_07ce3cbc__face0.json  Olivia_d554d07e__face0.json
examples/arcfaces/identity_003/: Olivia_0a473039__face0.json  Olivia_4a483b87__face0.json
examples/arcfaces/identity_004/: Olivia_0c2b658c__face0.json
examples/arcfaces/identity_006/: Olivia_0f25470e__face0.json  Olivia_a6f2be86__face0.json
examples/arcfaces/identity_007/: Olivia_24b10f76__face0.json
examples/arcfaces/identity_008/: Olivia_2716134c__face0.json  Olivia_587a0bbe__face0.json  Olivia_800fddf5__face0.json  (+3 more)
examples/identity_005/: Olivia_0c7d8069__face0.json  Olivia_1e04cf05__face0.json  Olivia_23d5ec0f__face0.json  Olivia_270d8eba__face0.json  Olivia_27b19fa1__face0.json  Olivia_3f2282a1__face0.json  Olivia_44b89820__face0.json  Olivia_52ebbaf9__face0.json  Olivia_5747b134__face0.json  Olivia_6ae143eb__face0.json  Olivia_6e59dffa__face0.json  Olivia_842ff782__face0.json  Olivia_893d7d7a__face0.json  Olivia_8d00f61a__face0.json  Olivia_b202c3e8__face0.json  Olivia_b8b80880__face0.json  Olivia_b8e5dd30__face0.json  Olivia_bc9f44c4__face0.json  Olivia_bd7d8982__face0.json  Olivia_ce9d2fae__face0.json  Olivia_da0717d0__face0.json  Olivia_dcd158ab__face0.json  Olivia_efeebddb__face0.json  Olivia_f9cfaae9__face0.json
scripts/: Invoke-Build-Run-Arcfaces.ps1
(+35 files in other folders)
