[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arcfaces"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "scikit-image>=0.25.2",
    "tqdm>=4.67.3",
    "onnxruntime",
    "onnxruntime-gpu",
    "torch",
    "torchvision",
    "kornia>=0.8.2",
]

[project.optional-dependencies]
dev = [
    "build",
    "pip", # TODO: ensure pip stays upgraded
    "jinja2",
    "requests",
    "pyinstaller",
    # "cibuildwheel",
    # "pytest>=8",
]

[project.scripts]
arcfaces = "arcfaces:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["arcfaces*"]

[tool.setuptools.package-data]
arcfaces = ["labels/*.yaml"]
